fixtures/errors/newline_in_comment.s
.name "ohno"
.comment "This is a
invalid comment"
